--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body, h1, p, a {
 body {
     font-family: Arial, sans-serif;
     font-size: 16px;
+    background-color: rgb(220, 220, 78);
 }
 
 /* Styling the header */
