--- a/style.css
+++ b/style.css
@@ -6,9 +6,35 @@ body, h1, p, a {
 
 /* Setting default font family and size */
 body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
     font-family: Arial, sans-serif;
     font-size: 16px;
     background-color: rgb(220, 220, 78);
+}
+
+table {
+    width: 100%;
+    height: 100%;
+    border-collapse: collapse;
+}
+
+
+td {
+    border: 1px solid black; 
+    text-align: center;      
+    vertical-align: middle; 
+}
+
+
+tr:first-child {
+    height: 10%; 
+}
+
+tr:last-child {
+    height: 90%; 
 }
 
 /* Styling the header */
@@ -115,4 +141,101 @@ form {
 /* Style pour les paragraphes */
 p {
     line-height: 1.4;
+}
+
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 20px; 
+}
+
+.form-row {
+    display: flex;
+    justify-content: space-between; 
+}
+
+.form-left {
+    display: flex;
+    flex-direction: column;
+    gap: 10px; 
+    width: 40%;
+}
+
+.form-middle{
+    display: flex;
+    flex-direction: column;
+    gap: 10px; 
+    width: 20%;
+
+}
+
+.form-right {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 40%; 
+    align-items: flex-end;
+}
+
+.form-container label {
+    font-weight: bold;
+}
+
+.form-container input,
+.form-container textarea {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%; 
+}
+
+.form-container button {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.form-container button:hover {
+    background-color: #45a049;
+}
+
+.page-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%; /* Prendre toute la hauteur de la page */
+}
+
+.content {
+    flex: 1; /* Prendre tout l'espace disponible sauf le bas */
+    padding: 20px; /* Espacement autour du contenu */
+}
+
+.footer {
+    text-align: center; /* Centrer le texte */
+    padding: 10px; /* Espacement autour du contenu */
+    background-color: #f1f1f1; /* Couleur de fond */
+    position: relative; /* Position relative pour le conteneur */
+    border-top: 1px solid #ccc; /* Ligne séparatrice en haut */
+}
+
+.footer form {
+    display: inline-block; /* Garde le formulaire centré */
+}
+
+.footer input {
+    padding: 10px 20px; /* Taille du bouton */
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.footer input:hover {
+    background-color: #45a049; /* Couleur au survol */
 }
