--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 /* Setting default font family and size */
-body,h1, p, a,html {
+body, html {
     margin: 0;
     padding: 0;
     height: 100%;
@@ -134,9 +134,6 @@ form {
 }
 
 /* Style pour les paragraphes */
-p {
-    line-height: 1.4;
-}
 
 
 .form-container {
