--- a/style.css
+++ b/style.css
@@ -14,11 +14,12 @@ table {
     width: 100%;
     height: 100%;
     border-collapse: collapse;
+    border: none;
 }
 
 
 td {
-    border: 1px solid black; 
+    border: none ; 
     text-align: center;      
     vertical-align: middle; 
 }
@@ -26,6 +27,7 @@ td {
 
 tr:first-child {
     height: 10%; 
+    border-bottom: 1px solid black;
 }
 
 tr:last-child {
